# DSA-1

./: CMakeLists.txt  binary-to-decimal.cpp  cmake.md  decimal-to-binary.cpp  first.cpp  lec-2-conditionals-&-loops.md  readme.md
2023-cherno-and-ankit-thak/dsa/: CMakeLists.txt  CMakePresets.json  intro.md  main.cpp  package-lock.json  package.json
2023-cherno-and-ankit-thak/dsa/section-10-binary-search/: p1-linear-search.cpp  p2-problem-with-linear-search.cpp  p3-binary-search.cpp
2023-cherno-and-ankit-thak/dsa/section-11-recursion/: imp-patterns.md  intro.cpp  p10-geometric-sum.cpp  p2-recursion-and-pmi.cpp  p3-fibnocci.cpp  p4-power.cpp  p5-print-number.cpp  p6-count-digits.cpp  p7-sum-of-digits.cpp  p8-multiplication.cpp  p9-count-zeroes.cpp
2023-cherno-and-ankit-thak/dsa/section-12-recursion-intermediate/: p1-is-array-sorted.cpp  p2-sum-of-array.cpp  p3-is-element-present.cpp  p4-first-index.cpp  p5-last-index.cpp  p6-print-all-positions.cpp  p7-count-occurences.cpp  p8-save-all-pos.cpp  p9-check-palindrome.cpp
2023-cherno-and-ankit-thak/dsa/section-13-recursion-advanced/: p1-print-char-arr.cpp  p10-tower-of-hanoi.cpp  p2-length-of-char-arr.cpp  p3-replace-character.cpp  p4-remove-char-recursively.cpp  p5-remove-consecutive-dups.cpp  p6-print-all-subsequences.cpp  p7-string-to-integer.cpp  p8-print-permutations.cpp  p9-staircase-problem.cpp
2023-cherno-and-ankit-thak/dsa/section-14-merge-sort-and-quick-sort/: p1-merge-sort.cpp  p2-quick-sort.cpp
2023-cherno-and-ankit-thak/dsa/section-15-advanced-binary-search/: p1-search-first-and-last-pos.cpp  (+1 more)
(+338 files in other folders)
